<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginHorizontal="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:maxLines="1"
        android:ellipsize="end"
        android:maxEms="18"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Register here"
        android:textColor="@color/grey"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Typography_Text_Input_Label"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:errorTextAppearance="@style/Typography_Error_Appearance"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="Typography_Body_Normal_Text_form"
            android:hint="@string/text_valid_email"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:paddingVertical="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Typography_Text_Input_Label"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:errorTextAppearance="@style/Typography_Error_Appearance"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="Typography_Body_Normal_Text_form"
            android:hint="@string/text_valid_username"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:paddingVertical="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Typography_Text_Input_Label"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/selector_show_password"
        app:passwordToggleTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/text_fill_your_password"
            style="Typography_Body_Normal_Text_form"
            android:maxLines="1"
            android:paddingVertical="20dp"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/Typography_Button_Label_Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bg_radius_blue_100dp"
        android:includeFontPadding="false"
        android:paddingHorizontal="30dp"
        android:paddingVertical="17dp"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>